Quick fix on top navbar z-index

--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -5,7 +5,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .container-floating-header {
